my account menu cut off issue fix

--- a/app/components/app/page/static/MyAccount.scss
+++ b/app/components/app/page/static/MyAccount.scss
@@ -53,6 +53,7 @@
     width: $staticWidth--m;
     margin: 0 auto;
     position: relative;
+    min-height: 400px;
 
 
     .woocommerce-error {
